--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">QuarterHour</string>
+    <string name="open">保存</string>
+    <string name="save">不保存</string>
+    <string name="close">取消</string>
 </resources>
