--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="open">保存</string>
     <string name="save">不保存</string>
     <string name="close">取消</string>
+    <string name="title_activity_success">SuccessActivity</string>
 </resources>
